# vor

./: CMakeLists.txt  README.md
data/: obtain.sh
include/: acoder.h  mix_nn0.h  pd_order0.h  pd_order1.h  vor.h
src/: vor.c
tests/: acoder_test.c  nn_test.c  vorcmp.c
